# -DAG-Agent-

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTEXT.md  README.md  pyproject.toml  requirements.txt
.claude/worktrees/p6-api-webui/: pyproject.toml  requirements.txt
.claude/worktrees/p6-api-webui/src/agents/: __init__.py  collector.py  contracts.py  cross_review.py  data_enricher.py  feature_analyzer.py  market_position.py  orchestrator.py  pricing_analyst.py  qa_logic_check.py  registry.py  sentiment_analyzer.py  source_discovery.py
.claude/worktrees/p6-api-webui/src/api/: app.py  websocket.py
.claude/worktrees/p6-api-webui/src/dag/: executor.py  scheduler.py
.claude/worktrees/p6-api-webui/src/knowledge_graph/: __init__.py  store.py
.claude/worktrees/p6-api-webui/src/llm_gateway/: __init__.py
.claude/worktrees/p6-api-webui/tests/: conftest.py
.claude/worktrees/p6-api-webui/tests/test_agents/: test_analysis_integration.py  test_base.py  test_collection_integration.py  test_collectors.py  test_enricher.py  test_orchestrator.py  test_registry.py  test_synthesizer_writer.py  test_web_tools.py
.claude/worktrees/p6-api-webui/tests/test_api/: test_report.py  test_task.py  test_trace.py  test_websocket.py
.claude/worktrees/p6-api-webui/tests/test_dag/: test_feedback.py  test_models.py
.claude/worktrees/p6-api-webui/tests/test_knowledge_graph/: test_query.py  test_store.py
.claude/worktrees/p6-api-webui/web/: package-lock.json  vite.config.ts
.claude/worktrees/p6-api-webui/web/src/: index.css
config/: saas.yaml
data/: cache.db  (+13 more)
(+263 files in other folders)
