[project]
name = "competitive-analysis-agents"
version = "0.1.0"
description = "AI-driven competitive analysis agent collaboration system"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "pydantic>=2.9.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "anthropic>=0.40.0",
    "openai>=1.55.0",
    "pyyaml>=6.0",
    "redis>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
